--- a/src/content.sass
+++ b/src/content.sass
@@ -47,7 +47,7 @@
     font-size: 1em
     margin-bottom: 1em
   blockquote
-    background-color: $color-background
+    background-color: $color-background-light
     border-left: solid 5px $color-primary
     padding: $text-padding
   ol
