--- a/src/variable.sass
+++ b/src/variable.sass
@@ -150,8 +150,8 @@ $default-color: #222222 !default
 
 $dark-background-color: #111111 !default
 
-$dark-default-background-color: #181818 !default
-$dark-default-border: solid 1px #222222 !default
+$dark-default-background-color: #222222 !default
+$dark-default-border: solid 1px #333333 !default
 $dark-default-color: #c0c0c0 !default
 
 /* Primary: here we define styles for primary elements */
@@ -164,7 +164,7 @@ $primary-color: #f0f0f0 !default
 
 // Dark primary colors
 
-$dark-primary-background-color: #002244 !default
+$dark-primary-background-color: #004499 !default
 $dark-primary-border: solid 1px #004499 !default
 $dark-primary-color: #c0c0c0 !default
 
@@ -178,7 +178,7 @@ $success-color: #f0f0f0 !default
 
 // Dark success colors
 
-$dark-success-background-color: #003300 !default
+$dark-success-background-color: #005500 !default
 $dark-success-border: solid 1px #006600 !default
 $dark-success-color: #c0c0c0 !default
 
@@ -192,7 +192,7 @@ $warning-color: #7a4900 !default
 
 // Dark warning colors
 
-$dark-warning-background-color: #883300 !default
+$dark-warning-background-color: #aa4400 !default
 $dark-warning-border: solid 1px #ff5500 !default
 $dark-warning-color: #c0c0c0 !default
 
@@ -206,7 +206,7 @@ $danger-color: #f0f0f0 !default
 
 // Dark danger colors
 
-$dark-danger-background-color: #440000 !default
+$dark-danger-background-color: #770000 !default
 $dark-danger-border: solid 1px #990000 !default
 $dark-danger-color: #c0c0c0 !default
 
@@ -266,21 +266,21 @@ $button-active-color: #333333 !default
 
 //Dark button default colors
 
-$dark-button-background-color: #181818 !default
-$dark-button-border: solid 1px #222222 !default
+$dark-button-background-color: #111111 !default
+$dark-button-border: solid 1px #444444 !default
 $dark-button-color: #c0c0c0 !default
 
 $dark-button-hover-background-color: #111111 !default
-$dark-button-hover-border: solid 1px #333333 !default
+$dark-button-hover-border: solid 1px #555555 !default
 $dark-button-hover-color: #c0c0c0 !default
 
 $dark-button-focus-background-color: #111111 !default
-$dark-button-focus-border: solid 1px #333333 !default
+$dark-button-focus-border: solid 1px #777777 !default
 $dark-button-focus-box-shadow: 0 0 0 2px #65a0d955 !default
 $dark-button-focus-color: #c0c0c0 !default
 
 $dark-button-active-background-color: #111111 !default
-$dark-button-active-border: solid 1px #444444 !default
+$dark-button-active-border: solid 1px #888888 !default
 $dark-button-active-color: #c0c0c0 !default
 
 // Button primary colors
@@ -801,11 +801,17 @@ $dark-notification-danger-color: $dark-danger-color !default
 
 /* Table: table, columns and rows */
 
-// Table sizes and colors
+// Table
 
 $table-background-color: $color-background !default
 $table-color: $color-text !default
 $table-border: none !default
+
+// Dark table
+
+$dark-table-background-color: $dark-color-background !default
+$dark-table-color: $dark-color-text !default
+$dark-table-border: none !default
 
 // Table header
 
@@ -816,6 +822,12 @@ $table-header-border: $default-border !default
 $table-header-padding: 0.6rem 0.75rem !default
 $table-header-font-size: 0.9em !default
 
+// Dark table header
+
+$dark-table-header-background-color: $dark-color-background !default
+$dark-table-header-color: $dark-color-text !default
+$dark-table-header-border: $dark-default-border !default
+
 // Table row
 
 $table-row-background-color: $color-background !default
@@ -824,6 +836,12 @@ $table-row-font-weight: $font-weight-default !default
 $table-row-border: $default-border !default
 $table-row-padding: 0.6rem 0.75rem !default
 $table-row-font-size: 1em !default
+
+// Dark table row
+
+$dark-table-row-background-color: $dark-color-background !default
+$dark-table-row-color: $dark-color-text !default
+$dark-table-row-border: $dark-default-border !default
 
 // Table footer
 
@@ -834,13 +852,27 @@ $table-footer-border: $default-border !default
 $table-footer-padding: 0.6rem 0.75rem !default
 $table-footer-font-size: 0.9em !default
 
+// Dark table footer
+
+$dark-table-footer-background-color: $dark-color-background !default
+$dark-table-footer-color: $dark-color-text !default
+$dark-table-footer-border: $dark-default-border !default
+
 // Table stripped
 
-$table-stripped-background-color: $color-background-semi-dark !default
+$table-stripped-background-color: #e9e9e9 !default
+
+// Dark table stripped
+
+$dark-table-stripped-background-color: #131313 !default
 
 // Table bordered
 
 $table-bordered-border: $default-border !default
+
+// Dark table bordered
+
+$dark-table-bordered-border: $dark-default-border !default
 
 /* Tag: properties of tag element */
 
